Update and rename 2023-02-12-Week 4.markdown to 2023-02-13-Week 4.markdown
why is the date 14/02 on the page?

--- a/_posts/2023-02-13-Week 4.markdown
+++ b/_posts/2023-02-13-Week 4.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Week Essay 4"
+title:  "Weekly Essay #4"
 date:   2023-02-13 21:00:56 -0600
 author: "Alondra Galvan"
 tags:
